@@ -700,7 +700,6 @@ end
 class TestNetHTTP_v1_2 < Test::Unit::TestCase
   CONFIG = {
     'host' => '127.0.0.1',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
   }
@@ -718,7 +717,6 @@ end
 class TestNetHTTP_v1_2_chunked < Test::Unit::TestCase
   CONFIG = {
     'host' => '127.0.0.1',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
     'chunked' => true,
@@ -749,7 +747,6 @@ end
 class TestNetHTTPContinue < Test::Unit::TestCase
   CONFIG = {
     'host' => '127.0.0.1',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
     'chunked' => true,
@@ -834,7 +831,6 @@ end
 class TestNetHTTPKeepAlive < Test::Unit::TestCase
   CONFIG = {
     'host' => '127.0.0.1',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
     'RequestTimeout' => 1,
@@ -886,7 +882,6 @@ end
 class TestNetHTTPLocalBind < Test::Unit::TestCase
   CONFIG = {
     'host' => 'localhost',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
   }
